# simple-repository-browser

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  REUSE.toml  package.json  prepare-repo-dump.py  pyproject.toml  setup.py  webpack.config.js
.github/workflows/: python-publish.yml  python-test.yml
acc-py-repository-browser/: .gitignore  README.md  build.sh  pyproject.toml  setup.py
acc-py-repository-browser/acc_py_repository_browser/: __init__.py  __main__.py  _app.py  controller.py  crawler.py  logging_utils.py  model.py  view.py  yank_manager.py
acc-py-repository-browser/acc_py_repository_browser/static_source/css/: theme.variables.css
acc-py-repository-browser/acc_py_repository_browser/templates/: base.html  manage.html  project.html  user.html
acc-py-repository-browser/deployment/app/: config.json  requirements.txt
acc-py-repository-browser/javascript/: build.sh  manage.js
acc-py-repository-browser/javascript/scss/: _variables.scss
acc_pypi_frontend/: __init__.py
acc_pypi_frontend/templates/: base.html  index.html
deployment/: Dockerfile
deployment/app/: config.json  requirements.txt
javascript/: package-lock.json  package.json  pypi.core.js  pypi.project.js  simple-repository-browser.core.js  simple-repository-browser.project.js  webpack.config.js
javascript/scss/: _variables.scss  app.scss
public/: Dockerfile  README.md
public/templates/: about.html  base.html
pypi_frontend/: __init__.py  __main__.py  _app.py  _develop.py  _gunicorn.py  _pypil.py  _search.py  app.js  fetch_description.py  fetch_projects.py
pypi_frontend/scss/: app.scss
pypi_frontend/templates/: about.html  base.html  index.html  project.html
pypi_frontend/templates/base/: about.html  base.html  error.html  index.html  page.html  project.html  search.html
pypi_frontend/tests/: test_pypi_frontend.py  test_search.py
simple_repository_browser/: __init__.py  __main__.py  _app.py  _compile_static.py  _develop.py  _search.py  _typing_compat.py  compatibility_matrix.py  controller.py  crawler.py  errors.py  fetch_description.py  fetch_projects.py  filesize_enrichment.py  metadata_injector.py  metadata_serialization.py  model.py  projects.py  short_release_info.py  static_files.py  view.py
simple_repository_browser/static/css/: theme.css
simple_repository_browser/static_source/css/: theme.variables.css
simple_repository_browser/templates/base/: about.html  about.html.jinja2  base.html  base.html.jinja2  error.html  error.html.jinja2  index.html  index.html.jinja2  page.html  page.html.jinja2  project.html  project.html.jinja2  search.html  search.html.jinja2
simple_repository_browser/tests/: __init__.py  test_RequirementSequence.py  test_compatibility_matrix.py  test_dependencies_index.py  test_fetch_description.py  test_filesize_enrichment.py  test_metadata_injector.py  test_metadata_serialization.py  test_model.py  test_pypi_frontend.py  test_search.py  test_static_files.py  test_view.py
templates/: base.html  error.html  index.html  release.html  search.html
web/: bootstrap.customized.js  package.json  webpack.config.js
web/scss/: app.scss
