[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[tool.setuptools_scm]
write_to = "simple_repository_browser/_version.py"

[[tool.mypy.overrides]]
module = [
    "diskcache",
    "parsley",
    # Only needed for acc-py-repository-browser
    "authlib.integrations.starlette_client",
]
ignore_missing_imports = true
