[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-repository-browser"
dynamic = ["version"]
description = "A web interface to browse and search packages in any simple package repository (PEP-503), inspired by PyPI / warehouse"
requires-python = ">=3.11"
authors = [
    {name = "Phil Elson"},
    {name = "Francesco Iannaccone"},
    {name = "Ivan Sinkarenko"},
]
dependencies = [
  "httpx",
  "aiosqlite",
  "diskcache",
  "docutils",
  "fastapi",
  "importlib_metadata>=6.0",
  "jinja2",
  "markdown",
  "markupsafe",
  "packaging",
  "parsley",
  "pkginfo>=1.12",
  "readme-renderer[md]",
  "simple-repository~=0.9",
  "typing-extensions",
  "uvicorn",
  "authlib",
  "starlette[full]",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/simple-repository/simple-repository-browser"

[project.optional-dependencies]
test = [
  "pytest",
]
dev = [
  "simple-repository-browser[test]",
]

[project.scripts]
simple-repository-browser = "simple_repository_browser.__main__:main"

[tool.setuptools_scm]
version_file = "simple_repository_browser/_version.py"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
force_sort_within_sections = true

# [tool.mypy]
# check_untyped_defs = true
# disallow_untyped_defs = true
# disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = [
    "diskcache",
    "parsley",
    "setuptools",
]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["simple_repository_browser", "simple_repository_browser.*"]
namespaces = false

[tool.setuptools.package-data]
# Static untracked files
"*" = ["static/vendored/*"]
