[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "acc-py-repository-browser"
dynamic = ["version"]
description = "A web interface to browse and search packages in any simple package repository (PEP-503), inspired by PyPI / warehouse"
requires-python = ">=3.11"
authors = [
    {name = "Phil Elson"},
    {name = "Francesco Iannaccone"},
    {name = "Ivan Sinkarenko"},
]
dependencies = [
  "authlib",
  "aiosqlite",
  "diskcache",
  "fastapi",
  "httpx",
  "packaging",
  "simple-repository~=0.9",
  "simple-repository-browser",
  "starlette[full]",
  "uvicorn",
]
readme = "README.md"

[project.urls]
Homepage = "https://acc-py-repo.cern.ch/"
Repository = "https://gitlab.cern.ch/acc-co/devops/python/package-index/acc-py-repository-browser"

[tool.setuptools_scm]
root = ".."
version_file = "acc_py_repository_browser/_version.py"

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
force_sort_within_sections = true

[[tool.mypy.overrides]]
module = [
    "diskcache",
    "parsley",
    "authlib.integrations.starlette_client",
    "setuptools",
]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["acc_py_repository_browser", "acc_py_repository_browser.*"]
namespaces = false

[tool.setuptools.package-data]
# Static untracked files
"*" = ["static/js/*", "static/css/*", "static/images/*", "templates/**"]
